Bug 255834 - [iOS] Fix the internal build
Summary: [iOS] Fix the internal build
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Aditya Keerthi
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-22 15:47 PDT by Aditya Keerthi
Modified: 2023-04-22 16:04 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aditya Keerthi 2023-04-22 15:47:16 PDT
Fix the internal build following new deprecations.
Comment 1 Radar WebKit Bug Importer 2023-04-22 15:47:34 PDT
<rdar://problem/108413602>
Comment 2 Aditya Keerthi 2023-04-22 15:54:21 PDT
Pull request: https://github.com/WebKit/WebKit/pull/13074
Comment 3 EWS 2023-04-22 16:04:50 PDT
Committed 263285@main (ee7888e4e2ce): <https://commits.webkit.org/263285@main>

Reviewed commits have been landed. Closing PR #13074 and removing active labels.