[iOS] Fix the internal build https://bugs.webkit.org/show_bug.cgi?id=255834 rdar://108413602

Unreviewed build fix.

Fix the build following recent deprecations in UIKit.

* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:

`UIBacklightLevelChangedNotification` has been deprecated in favor of
`UIScreenBrightnessDidChangeNotification`. However, the change is not
a simple replacement, since it also requires replacing the use of
`CFNotificationCenter` with `NSNotificationCenter`.

(WebKit::WebProcessPool::registerNotificationObservers):
(WebKit::WebProcessPool::unregisterNotificationObservers):
* Source/WebKit/UIProcess/ios/WebDataListSuggestionsDropdownIOS.mm:
(-[WKDataListSuggestionsPicker initWithInformation:inView:]):

Mechanical change to set a view's frame's size.

* Source/WebKit/UIProcess/ios/forms/WKFormSelectPicker.mm:
(-[WKMultipleSelectPicker initWithView:]):

Mechanical change to set a view's frame's size.

(-[WKMultipleSelectPicker pickerView:row:column:checked:]):

There is no known replacement for the deprecated method.

(-[WKMultipleSelectPicker selectRow:inComponent:extendingSelection:]):

There is no known replacement for the deprecated method.

* Tools/WebKitTestRunner/ios/PlatformWebViewIOS.mm:
(-[WebKitTestRunnerWindow setFrameOrigin:]):

This override may be unnecessary, and should be evaluated separately.

Canonical link: https://commits.webkit.org/263285@main