Source/WebKit/UIProcess/ios/forms/WKFormSelectPicker.mm
@@ -164,7 +164,11 @@ ALLOW_DEPRECATED_DECLARATIONS_BEGIN
 ALLOW_DEPRECATED_DECLARATIONS_END
 
     [self setAllowsMultipleSelection:_allowsMultipleSelection];
-    [self setSize:[UIKeyboard defaultSizeForInterfaceOrientation:view.interfaceOrientation]];
+
+    CGRect frame = self.frame;
+    frame.size = [UIKeyboard defaultSizeForInterfaceOrientation:view.interfaceOrientation];
+    [self setFrame:frame];
+
     [self reloadAllComponents];
 
     if (!_allowsMultipleSelection) {
@@ -277,7 +281,9 @@ ALLOW_DEPRECATED_DECLARATIONS_END
     return itemIndex;
 }
 
+ALLOW_DEPRECATED_IMPLEMENTATIONS_BEGIN
 - (void)pickerView:(UIPickerView *)pickerView row:(int)rowIndex column:(int)columnIndex checked:(BOOL)isChecked
+ALLOW_DEPRECATED_IMPLEMENTATIONS_END
 {
     auto numberOfOptions = static_cast<NSUInteger>([_view focusedSelectElementOptions].size());
     if (numberOfOptions <= static_cast<NSUInteger>(rowIndex))
@@ -321,7 +327,9 @@ ALLOW_DEPRECATED_DECLARATIONS_END
     // FIXME: handle extendingSelection.
     [self selectRow:rowIndex inComponent:0 animated:NO];
     // Progammatic selection changes don't call the delegate, so do that manually.
+ALLOW_DEPRECATED_DECLARATIONS_BEGIN
     [self pickerView:self row:rowIndex column:0 checked:YES];
+ALLOW_DEPRECATED_DECLARATIONS_END
 }
 
 - (BOOL)selectFormAccessoryHasCheckedItemAtRow:(long)rowIndex
